fix: Content layout wrapping issue

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -1673,9 +1673,12 @@ html[data-theme='light'] .mn-tile {
   border-radius: 8px;
   border: 1px solid var(--ifm-toc-border-color);
   background: var(--ifm-menu-color-background);
-  width: auto;
-  max-width: calc(100% - 2rem);
+  width: 100%;
   box-sizing: border-box;
+}
+
+.container:has(.col--3) {
+  max-width: calc(100% - 2rem);
 }
 
 .select {
